<resources>
    <string name="app_name">RéSoEcole</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Courriel*</string>
    <string name="hint_email">nom@umontreal.ca</string>
    <string name="prompt_password">Mot de passe*</string>
    <string name="forget_password">Mot de passe oublié</string>
    <string name="save_profil">Enregistrer</string>
    <string name="title_authen">Authentification</string>
    <string name="title_profil">Créer un compte</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">S&apos;inscrire</string>
    <string name="title_fullName">Nom Complet*</string>
    <string name="title_etablissement">Etablissement d&apos;enseignement*</string>
    <string name="title_etude">Programme détude*</string>
    <string name="title_niveau_etude">Niveau d&apos;etudes</string>
    <string name="title_mutical_choix">Plusieurs choix possibles</string>
    <string name="title_interet">Quel sont vos centres d&apos;intérêt?</string>
    <string name="input_interet">Entrer vos centre d&apos;intérêts ici</string>
    <string name="title_cours">Quels cours prenew vous cette session?</string>
    <string name="title_clubs">Entrer les clubs auxquels vous participez:</string>
    <string name="title_email">Courriel*</string>
    <string name="title_confirm_email">Confirmer votre courriel*</string>
    <string name="title_confirm_password">Confirmer votre mot de passe*</string>
    <string name="button_likeInfo">J&apos;aime l&apos;info</string>
    <string name="button_likeMath">J&apos;aime les maths</string>
    <string name="input_class">IFT2905</string>
    <string name="button_IFT2905">IFT2905</string>
    <string name="button_IFT2015">IFT2015</string>
    <string name="input_club">Design d&apos;interface</string>
    <string name="button_design">Design d&apos;interface</string>
    <string name="button_coding">Coding</string>
    <string name="go_back">Retour</string>
    <string name="go_next">Suivant</string>
    <string name="ignore">Ignorer</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>