<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F5FF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.CreateAccountActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ci_luncher"
        tools:ignore="MissingConstraints,VectorDrawableCompat"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/titleCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginTop="50dp"
        android:text="@string/title_profil"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/profilScrol"
        android:layout_width="593dp"
        android:layout_height="346dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:id="@+id/profilInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:rotation="0">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/title_fullName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etablisseInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_etablissement" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/progDetudeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/title_etude" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nivDetudeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_niveau_etude" />


            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/plsChoix"
                android:layout_width="381dp"
                android:layout_height="28dp"
                android:layout_gravity="left"
                android:text="@string/title_mutical_choix"
                android:textColor="#040404"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/quesInterest"
                android:layout_width="381dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:textColor="#040404"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/interetInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_interet" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/likeMath"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_likeMath"
                    app:backgroundTint="#2D9BF0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/quesClass"
                android:layout_width="381dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:textColor="#040404"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Entrez les  cours que vous prenez cette session" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/classIFT2905"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/button_IFT2905"
                    app:backgroundTint="#2D9BF0"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/classIFT2015"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_IFT2015"
                    app:backgroundTint="#2D9BF0"
                    android:textSize="12sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/quesClub"
                android:layout_width="381dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:textColor="#040404"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Entrez les clubs auquels vous participez" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clubDesign"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/button_design"
                    app:backgroundTint="#2D9BF0"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/clubCoding"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_coding"
                    app:backgroundTint="#2D9BF0"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <Button
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                app:backgroundTint="#2D9BF0"
                android:text="@string/go_back" />

            <Button
                android:id="@+id/goNext"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:backgroundTint="#2D9BF0"
                android:layout_alignParentRight="true"
                android:text="@string/go_next" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>



