<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F5FF"
    tools:context=".ui.login.CreateAccount2Activity">

    <TextView
        android:id="@+id/titleCreateAccount"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="632dp"
        android:rotationX="0"
        android:text="@string/title_profil"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ScrollView
        android:id="@+id/profilScrol"
        android:layout_width="416dp"
        android:layout_height="480dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <LinearLayout
            android:id="@+id/profilInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:rotation="0">

            <TextView
                android:id="@+id/quesEmail"
                android:layout_width="363dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:text="@string/title_email"
                android:textColor="#050505"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirmEmail"
                android:layout_width="372dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:text="@string/title_confirm_email"
                android:textColor="#090909"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmailAgain"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/quesPassword"
                android:layout_width="363dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:text="@string/prompt_password"
                android:textColor="#050505"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/quesPasswordAgain"
                android:layout_width="363dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:text="@string/title_confirm_password"
                android:textColor="#050505"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPasswordAgain"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/title_confirm_password" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/registrer"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginBottom="56dp"
        android:text="@string/action_sign_in_short"
        app:backgroundTint="#2D9BF0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilScrol" />

    <TextView
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:text="Retour"
        android:clickable="true"
        android:textSize="20sp"
        android:textColor="#2D9BF0"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>